--- a/bo2016/index.html
+++ b/bo2016/index.html
@@ -45,7 +45,7 @@
         </ul>
         
       </div>
-      <img src="./img/loading.gif" ng-if="loading"></img>
+      <!-- <img src="./img/loading.gif" ng-if="loading"></img> -->
 	  <div id="content" ng-include="templateUrl"></div>
 	  
     </div>
