--- a/bo2016/index.html
+++ b/bo2016/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html ng-app="compApp">
 <head>
-  <title>Bandung Open 2016 - Official WCA Competition</title>
-  <meta name="description" content="Bandung Open 2015, Official WCA Competition" />
-  <meta name="keywords" content="Rubik's Cube, Official Competitions, 4x4 Cube" />
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
-  <!-- Angular JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
-  <!-- Controller app -->
-  <script src="./js/app.js"></script>
+	<title>Bandung Open 2016 - Official WCA Competition</title>
+	<meta name="description" content="Bandung Open 2015, Official WCA Competition" />
+	<meta name="keywords" content="Rubik's Cube, Official Competitions, 4x4 Cube" />
+	<meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+	<link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
+	<link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+	<!-- Angular JS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+	<!-- Controller app -->
+	<script src="./js/app.js"></script>
 </head>
 
 <body ng-controller="mainController">
@@ -20,19 +20,19 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="" ng-click="openpage('home')">Bandung<span class="logo_colour">Open</span>2016</a></h1>
+          <h1><a ng-href="./#/">{{comp.longName}}</a></h1>
           <h2>Let's cube together!</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="" ng-click="openpage('home')">Home</a></li>
-          <li><a href="" ng-click="openpage('schedule')">Schedule</a></li>
-          <li><a href="" ng-click="openpage('venue')">Venue &amp; Travel</a></li>
-          <li><a href="" ng-click="openpage('registration')">Registration</a></li>
-		  <li><a href="" ng-click="openpage('competitors')">Competitors</a></li>
-          <li><a href="" ng-click="openpage('contact')">Contact Us</a></li>
+          <li><a ng-href="./#/">Home</a></li>
+          <li><a ng-href="./#/schedule">Schedule</a></li>
+          <li><a ng-href="./#/venue">Venue &amp; Travel</a></li>
+          <li><a ng-href="./#/registration">Registration</a></li>
+		  <li><a ng-href="./#/competitors">Competitors</a></li>
+          <li><a ng-href="./#/contact">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -46,7 +46,7 @@
         
       </div>
       <!-- <img src="./img/loading.gif" ng-if="loading"></img> -->
-	  <div id="content" ng-include="templateUrl"></div>
+	  <div id="content" ng-view></div>
 	  
     </div>
     <div id="content_footer"></div>
