--- a/index.html
+++ b/index.html
@@ -1,2 +1,30 @@
-<h1>Ardianto Satriawan</h1>
-- test website
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Ardianto Satriawan</title>
+</head>
+<body>
+	<div class="container">
+		<h1>Ardianto Satriawan</h1>
+		<!--
+		<div id="menu">
+			<a href="#education">Education</a> | <a href="#work">Work Experiences</a> | <a href="#teaching">Teaching</a> | <a href="#courseworks">Courseworks</a> | <a href="#paper">Papers</a> | <a href="#achievements">Achievements</a>
+		</div>
+		-->
+		<table>
+			<tr>
+				<td>
+					<img src="me.jpeg" width="100" alt="me.jpeg">
+				</td>
+				<td>
+					<p>Hello, welcome to my website. My name is Ardianto Satriawan.  I hold a Master in Electrical Engineering degree from <a href="http://www.stei.itb.ac.id">School of Electrical Engineering and Informatics</a>, <a href="http://www.itb.ac.id">Institut Teknologi Bandung (ITB)</a>, Indonesia. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia).</p>
+				</td>
+			</tr>
+		</table>
+		
+		<div id="update">Copyright 2015 Ardianto Satriawan.</div>
+	</div>
+</body>
+</html>
