move images to /img directory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<table>
 			<tr>
 				<td>
-					<img src="me.jpeg" width="100" alt="me.jpeg">
+					<img src="./img/me.jpeg" width="100" alt="me.jpeg">
 				</td>
 				<td>
 					<p>Hello, welcome to my website. My name is Ardianto Satriawan.  I hold a Master in Electrical Engineering degree from <a href="http://www.stei.itb.ac.id">School of Electrical Engineering and Informatics</a>, <a href="http://www.itb.ac.id">Institut Teknologi Bandung (ITB)</a>, Indonesia. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia).</p>
