--- a/fdcm.html
+++ b/fdcm.html
@@ -84,10 +84,10 @@
 		<p>Now look at the Back Face, do the following:</p>
 		
 		<ul>
-			<li>Substract center number (8) with <b>top edge</b> number (6) = 2</li>
-			<li>Substract center number (8) with <b>left edge</b> number (10) = -2</li>
-			<li>Substract center number (8) with <b>bottom edge</b> number (3) = 5</li>
-			<li>Substract center number (8) with <b>right edge</b> number (5) = 3</li>
+			<li>Subtract center number (8) with <b>top edge</b> number (6) = 2</li>
+			<li>Subtract center number (8) with <b>left edge</b> number (10) = -2</li>
+			<li>Subtract center number (8) with <b>bottom edge</b> number (3) = 5</li>
+			<li>Subtract center number (8) with <b>right edge</b> number (5) = 3</li>
 		</ul>
 		
 		<p>[Notice it's counter clockwise starting from top edge]</p>
@@ -96,14 +96,19 @@
 		
 		<h3>2. Double Cross Phase</h3>
 		
-		<p>Start from the Front Face</p>
+		<p>Start from the <b>Front Face</b></p>
 		
 		<ul>
-			<li></li>
+			<li>Position the pin as UUdd, align the center with <b>bottom edge</b>, to 10 [u=2]. Then do the <b>first</b> number that you memorized for d. [d=2]</li>
+			<li>Position the pin as dUdU, align the center with <b>left edge</b>, to 8 [u=-2]. Then do the <b>second</b> number that you memorized for d. [d=-2]</li>
+			<li>Position the pin as ddUU, align the center with <b>top edge</b>, to 9 [u=1]. Then do the <b>third</b> number that you memorized for d. [d=5]</li>
+			<li>Position the pin as UdUd, align the center with <b>right edge</b>, to 7 [u=-2]. Then do the <b>third</b> number that you memorized for d. [d=3]</li>
 		</ul>
 		
+		<p>[Notice that it's clockwise startying from bottom edge, also the pin position is also same as scrambling]</p>
+		
 		<h3>3. Solve Corners</h3>
-		<p>Solve corners like usual.</p>
+		<p>Flip the clock, you should see cross on backside. Solve corners like usual.</p>
 		<div id="update">Copyright 2015 Ardianto Satriawan.</div>
 	</div>
 </body>
