Adding align to 12

--- a/fdcm.html
+++ b/fdcm.html
@@ -107,6 +107,8 @@
 		
 		<p>[Notice that it's clockwise startying from bottom edge, also the pin position is also same as scrambling]</p>
 		
+		<p>Then, align the edges to twelve.</p>
+		
 		<h3>3. Solve Corners</h3>
 		<p>Flip the clock, you should see cross on backside. Solve corners like usual.</p>
 		<div id="update">Copyright 2015 Ardianto Satriawan.</div>
