--- a/fdcm.html
+++ b/fdcm.html
@@ -61,7 +61,7 @@
 		dUdU
 		</pre>
 		
-		<p>Your clock should be look like this</p>
+		<p>Your clock should look like this</p>
 		
 		Front:
 		<pre>
