Add fdcm + index

--- a/fdcm.html
+++ b/fdcm.html
@@ -111,6 +111,11 @@
 		
 		<h3>3. Solve Corners</h3>
 		<p>Flip the clock, you should see cross on backside. Solve corners like usual.</p>
+		
+		<p>-----</p>
+		
+		<p>This article translated from <a href="https://www.facebook.com/notes/ardianto-satriawan/fahmi-double-cross-method-for-clock/10150166106294522">my facebook note on April 23, 2011</a>.</p>
+		
 		<div id="update">Copyright 2015 Ardianto Satriawan.</div>
 	</div>
 </body>
