--- a/index.html
+++ b/index.html
@@ -8,22 +8,41 @@
 <body>
 	<div class="container">
 		<h1>Ardianto Satriawan</h1>
-		<!--
-		<div id="menu">
-			<a href="#education">Education</a> | <a href="#work">Work Experiences</a> | <a href="#teaching">Teaching</a> | <a href="#courseworks">Courseworks</a> | <a href="#paper">Papers</a> | <a href="#achievements">Achievements</a>
-		</div>
-		-->
+		
 		<table>
 			<tr>
 				<td>
 					<img src="./img/me.jpeg" width="100" alt="me.jpeg">
 				</td>
 				<td>
-					<p>Hello, welcome to my website. My name is Ardianto Satriawan.  I hold a Master in Electrical Engineering degree from <a href="http://www.stei.itb.ac.id">School of Electrical Engineering and Informatics</a>, <a href="http://www.itb.ac.id">Institut Teknologi Bandung (ITB)</a>, Indonesia. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia).</p>
+					<p>Hello, welcome to my website. My name is Ardianto Satriawan.  I hold a Master in Electrical Engineering degree from <a href="http://www.stei.itb.ac.id">School of Electrical Engineering and Informatics</a>, <a href="http://www.itb.ac.id">Institut Teknologi Bandung (ITB)</a>, Indonesia. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia). I am <a href="https://www.worldcubeassociation.org/results/p.php?i=2009SATR01">2009SATR01</a> on World Cube Association</p>
 				</td>
 			</tr>
 		</table>
 		
+		<h2>Cubing Documentations</h2>
+		<table>
+			<!-- FDCM -->
+			<tr>
+				<td>
+					<a href="./fdcm.html"><img src="./img/clock.jpg" width="100" alt="me.jpeg"></a>
+				</td>
+				<td>
+					<p><a href="./fdcm.html">Double Cross Method for Clock [FDCM]</a></p>
+				</td>
+			</tr>
+			
+			<!-- Stackmat Arduino -->
+			<tr>
+				<td>
+					<a href="./stackmatarduino.html"><img src="./img/stackmat.jpg" width="100" alt="me.jpeg"></a>
+				</td>
+				<td>
+					<p><a href="./stackmatarduino.html">Stackmat Display Timer using Arduino UNO R3</a></p>
+				</td>
+			</tr>
+			
+		</table>
 		<div id="update">Copyright 2015 Ardianto Satriawan.</div>
 	</div>
 </body>
