--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<img src="./img/me.jpeg" width="100" alt="me.jpeg">
 				</td>
 				<td>
-					<p>Hello, welcome to my website. My name is Ardianto Satriawan.  I hold a Master in Electrical Engineering degree from <a href="http://www.stei.itb.ac.id">School of Electrical Engineering and Informatics</a>, <a href="http://www.itb.ac.id">Institut Teknologi Bandung (ITB)</a>, Indonesia. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia). I am <a href="https://www.worldcubeassociation.org/results/p.php?i=2009SATR01">2009SATR01</a> on World Cube Association.</p>
+					<p>Hello, welcome to my website. My name is Ardianto Satriawan. You can reach me via <a href="mailto:ardiantosatriawan@gmail.com">E-mail</a>, <a href="http://facebook.com/ardiantosatriawan">Facebook</a>, and <a href="http://twitter.com/ardisatriawan">Twitter</a>. Also you may be interested to read <a href="http://ardiantosatriawan.wordpress.com">my blog</a> (in Bahasa Indonesia). I am <a href="https://www.worldcubeassociation.org/results/p.php?i=2009SATR01">2009SATR01</a> on World Cube Association.</p>
 				</td>
 			</tr>
 		</table>
