--- a/fdcm.html
+++ b/fdcm.html
@@ -16,13 +16,13 @@
 			<li>Cross on Back Face</li>
 			<li>Solve the corners</li>
 		</ol>
-		My friend, <a href="https://www.worldcubeassociation.org/results/p.php?i=2011TAUF01">Fahmi Taufiqulhadi</a>, proposed that probably we can do step 1 and 3 altogether. So the method will be:
+		My friend, <a href="https://www.worldcubeassociation.org/results/p.php?i=2011TAUF01">Fahmi Taufiqulhadi</a>, proposed that probably we can do step 1 and 3 altogether. So the method will be:</p>
 		<ol>
 			<li>Cross on Front Face and Back Face, align to 12.</li>
 			<li>Flip the clock.</li>
 			<li>Solve the corners</li>
 		</ol>
-		He called that method "FDCM" (Fahmi Double Cross Method). Well, we don't know anyone who documented this method during that time. [Stefan Pochmann and David Woner mentioned "No-flip method" and "do the math" on <a href="https://www.speedsolving.com/forum/showthread.php?10648-Speedsolving-rubik-s-clock/">a Speedsolving thread</a>, but no explanation] Personally, I consider this an "idea" and not yet a method.</p>
+		<p>He called that method "FDCM" (Fahmi Double Cross Method). Well, we don't know anyone who documented this method during that time. [Stefan Pochmann and David Woner mentioned "No-flip method" and "do the math" on <a href="https://www.speedsolving.com/forum/showthread.php?10648-Speedsolving-rubik-s-clock/">a Speedsolving thread</a>, but no explanation] Personally, I consider this an "idea" and not yet a method.</p>
 		
 		<p>Here is some demonstration on simulator by my friend, <a href="https://www.worldcubeassociation.org/results/p.php?i=2010WICA01">Cahyo Galuh Wicaksono</a>, pretty decent attempt on his third day after learning clock:</p>
 		
