--- a/bo2016/index.html
+++ b/bo2016/index.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252" />
 	<link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neuton' rel='stylesheet' type='text/css'>
 	<!-- Angular JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
@@ -19,8 +21,9 @@
     <div id="header">
       <div id="logo">
         <div id="logo_text">
+
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a ng-href="./#/">{{comp.longName}}</a></h1>
+          <h1><a ng-href="./#/" class="logo_colour">{{comp.longName}}</a></h1>
           <h2>Let's cube together!</h2>
         </div>
       </div>
