Finalizing website post event

--- a/bo2016/index.html
+++ b/bo2016/index.html
@@ -54,7 +54,7 @@
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; 2015-2016 Bandung Cuber Club | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a>
+      Copyright &copy; 2015-2016 Bandung Cuber Club
     </div>
   </div>
 </body>
