Typo, third -> fourth

--- a/fdcm.html
+++ b/fdcm.html
@@ -85,7 +85,7 @@
 			<li>Position the pin as UUdd, align the center with <b>bottom edge</b>, to 10 [u=2]. Then do the <b>first</b> number that you memorized for d. [d=2]</li>
 			<li>Position the pin as dUdU, align the center with <b>left edge</b>, to 8 [u=-2]. Then do the <b>second</b> number that you memorized for d. [d=-2]</li>
 			<li>Position the pin as ddUU, align the center with <b>top edge</b>, to 9 [u=1]. Then do the <b>third</b> number that you memorized for d. [d=5]</li>
-			<li>Position the pin as UdUd, align the center with <b>right edge</b>, to 7 [u=-2]. Then do the <b>third</b> number that you memorized for d. [d=3]</li>
+			<li>Position the pin as UdUd, align the center with <b>right edge</b>, to 7 [u=-2]. Then do the <b>fourth</b> number that you memorized for d. [d=3]</li>
 		</ul>
 		
 		<p>[Notice that it's clockwise startying from bottom edge, also the pin position is also same as scrambling]</p>
