--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="examples.html">Teaching</a></li>
+          <li><a href="page.html">Projects</a></li>
+		  <li><a href="page.html">Publications</a></li>
+          <li><a href="another_page.html">Life in SeoulTech</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -36,10 +37,6 @@
         <h4>New Website Launched</h4>
         <h5>January 1st, 2014</h5>
         <p>2014 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <p></p>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2014</h5>
-        <p>2014 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
         <h3>Useful Links</h3>
         <ul>
           <li><a href="#">link 1</a></li>
@@ -47,18 +44,12 @@
           <li><a href="#">link 3</a></li>
           <li><a href="#">link 4</a></li>
         </ul>
-        <h3>Search</h3>
-        <form method="post" action="#" id="search_form">
-          <p>
-            <input class="search" type="text" name="search_field" value="Enter keywords....." />
-            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="style/search.png" alt="Search" title="Search" />
-          </p>
-        </form>
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Welcome to the textured_stars_light template</h1>
-        <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under a <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>), which means that you are free to download and use it for anything you want (including modifying and amending it). All I ask is that you leave the 'design from HTML5webtemplates.co.uk' link in the footer of the template, but other than that...</p>
+        <h1>Welcome!</h1>
+        <p>Hi! Welcome to my personal homepage. My name is Ardianto Satriawan, I am a lecturer in School of Electrical Engineering, Institut Teknologi Bandung. Currently I am leaving for my Ph.D study in Seoul National University of Science and Technology, Seoul, South Korea.</p>
+		
         <p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS</strong>, and can be validated using the links in the footer.</p>
         <p>You can view more free HTML5 web templates <a href="http://www.html5webtemplates.co.uk">here</a>.</p>
         <p>This template is a fully functional 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design.</p>
