--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Ardianto, Satriawan" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+  <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
 </head>
 
 <body>
@@ -48,18 +49,12 @@
       <div id="content">
         <!-- insert the page content here -->
         <h1>Welcome!</h1>
-        <p>Hi! Welcome to my personal homepage. My name is Ardianto Satriawan, I am a lecturer in School of Electrical Engineering, Institut Teknologi Bandung. Currently I am leaving for my Ph.D study in Seoul National University of Science and Technology, Seoul, South Korea.</p>
+        <p align="center"><img src="img/profile.jpg"></p>
 		
-        <p>This template is written entirely in <strong>HTML5</strong> and <strong>CSS</strong>, and can be validated using the links in the footer.</p>
-        <p>You can view more free HTML5 web templates <a href="http://www.html5webtemplates.co.uk">here</a>.</p>
-        <p>This template is a fully functional 5 page website, with an <a href="examples.html">examples</a> page that gives examples of all the styles available with this design.</p>
-        <h2>Browser Compatibility</h2>
-        <p>This template has been tested in the following browsers:</p>
-        <ul>
-          <li>Internet Explorer 9</li>
-          <li>FireFox 25</li>
-          <li>Google Chrome 31</li>
-        </ul>
+		<p>Hi! Welcome to my personal homepage. My name is Ardianto Satriawan, I am a lecturer in School of Electrical Engineering, Institut Teknologi Bandung. Currently I am leaving for my Ph.D study in <a href=http://wnlab.seoultech.ac.kr/">Wireless Networking Laboratory</a>, Seoul National University of Science and Technology, Seoul, South Korea.</p>
+		
+        <p>This website is intended as a documentation for my teachings, projects, documentation, and my life experiences in Korea.</p>
+		
       </div>
     </div>
     <div id="footer">
